# helix

./: CONTRIBUTING.md  Cargo.toml  DEMO.md  INTEGRATION.md  README.md  ROADMAP.md  SUMMARY.md  WORKFLOWS.md  makefile  notes.md
.github/workflows/: release.yaml
.helix/: config.toml  helix.idx
benches/: helix_index.rs  index.rs  status_performance.rs
benches/archive/: 2025-11-22-001.md  2025-11-22.md  2025-11-23-001.md  2025-11-23-002.md
examples/: profile_sync.rs
helix-cli/: Cargo.toml  README.md
helix-cli/.helix/: config.toml
helix-cli/benches/: helix_index.rs  index.rs  status_performance.rs
helix-cli/benches/archive/: 2025-11-23-003.md
helix-cli/scripts/: benchmark_summary.py
helix-cli/src/: add.rs  add_command.rs  branch.rs  branch_command.rs  checkout.rs  commit.rs  commit_command.rs  config.rs  diff_command.rs  fsmonitor.rs  handshake.rs  ignore.rs  index.rs  init.rs  init_command.rs  lib.rs  main.rs  merge_command.rs  pull.rs  pull_command.rs  push.rs  push_command.rs  sandbox_command.rs  unstage_command.rs  workflow.rs
helix-cli/src/branch_tui/: app.rs  ui.rs
helix-cli/src/helix_index/: api.rs  blob_storage.rs  commit.rs  format.rs  hash.rs  mod.rs  reader.rs  state.rs  sync.rs  tree.rs  verify.rs  writer.rs
helix-cli/src/log/: app.rs  ui.rs
helix-cli/src/merge_tui/: actions.rs  app.rs  mod.rs  ui.rs
helix-cli/src/sandbox_tui/: app.rs  ui.rs
helix-cli/src/status/: app.rs  mod.rs  ui.rs
helix-cli/tests/: diff_integration.rs  fsmonitor_integration.rs  status_with_index.rs  unstage_integration.rs
helix-protocol/: .gitignore  Cargo.toml
helix-protocol/src/: commit.rs  hash.rs  lib.rs  message.rs  storage.rs
helix-server/: Cargo.toml
helix-server/.helix/refs/heads/: main
helix-server/.helix/refs/refs/heads/: main
helix-server/src/: app_state.rs  lib.rs  main.rs  message.rs  walk.rs
helix-server/src/handlers/: handshake.rs  mod.rs  pull.rs  push.rs  utils.rs
helix-server/src/storage/: refs.rs  storage.rs
scripts/: benchmark_summary.py  build.sh
src/: add.rs  branch.rs  commit.rs  config.rs  fsmonitor.rs  git.rs  ignore.rs  index.rs  init.rs  lib.rs  llm.rs  main.rs  push.rs  workflow.rs
src/branch_tui/: actions.rs  app.rs  mod.rs  ui.rs
src/helix_index/: api.rs  blob_storage.rs  commit.rs  fingerprint.rs  format.rs  hash.rs  mod.rs  reader.rs  state.rs  sync.rs  tree.rs  utils.rs  verify.rs  writer.rs
src/helix_index/tests/: unit.rs
src/helix_to_git/: converter.rs  git_objects.rs  mod.rs  push_cache.rs
src/log/: actions.rs  app.rs  commits.rs  mod.rs  ui.rs
src/status/: actions.rs  app.rs  commits.rs  ui.rs
tests/: fsmonitor_integration.rs  status_with_index.rs
