[package]
name = "helix"
version = "0.1.1"
edition = "2021"
description = "A CLI for agentic development"
authors = ["Evis Drenova"]
license = "MIT"
repository = "https://github.com/evisdrenova/helix"
homepage = "https://github.com/evisdrenova/helix"
readme = "README.md"
keywords = ["git", "ai", "cli","llm","openai"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "helix"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.40", features = ["derive"] }
dirs = "6.0.0"
json = "0.12.4"
reqwest = { version = "0.12.20", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
toml = "0.8.23"
