[package]
name = "helix"
version = "0.1.3"
edition = "2021"
description = "A CLI for agentic development"
authors = ["Evis Drenova"]
license = "MIT"
repository = "https://github.com/evisdrenova/helix"
homepage = "https://github.com/evisdrenova/helix"
readme = "README.md"
keywords = ["git", "ai", "cli","llm","openai"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "helix"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.98"
bitflags = "2.10.0"
blake3 = "1.8.2"
chrono = "0.4.42"
clap = { version = "4.5.40", features = ["derive"] }
criterion = { version = "0.7", features = ["html_reports"] }
crossbeam-channel = "0.5.15"
crossterm = "0.29.0"
dashmap = "6.1.0"
dirs = "6.0.0"
flate2 = "1.1.5"
git2 = "0.20.2"
gix = "0.75.0"
hex = "0.4.3"
json = "0.12.4"
md-5 = "0.10.6"
memmap2 = "0.9.9"
notify = "8.2.0"
ratatui = "0.29.0"
rayon = "1.11.0"
reqwest = { version = "0.12.20", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
sha1 = "0.10.6"
sha2 = "0.10.9"
tempfile = "3.23.0"
thiserror = "2.0.17"
time = "0.3.44"
tokio = { version = "1.0", features = ["full"] }
toml = "0.8.23"
unicode-width = "0.2.0"
walkdir = "2.5.0"
zstd = "0.13.3"


[[bench]]
name = "helix_index"
harness = false

[[bench]]
name = "status_performance"
harness = false
