[package]
name = "helix-protocol"
version = "0.1.0"
edition = "2021"
authors = ["Evis Drenova <evisdrenova@gmail.com"]

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
bincode = "1.3"
thiserror = "1"