[package]
name = "helix-protocol"
version = "0.1.0"
edition = "2021"
authors = ["Evis Drenova <evisdrenova@gmail.com"]

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
bincode = "1.3"
thiserror = "1"
blake3 = "1.8.2"
rayon = "1.11.0"
hex = "0.4.3"
sha1 = "0.10.6"
tempfile = "3.23.0"
