[package]
name = "helix-server"
version = "0.1.0"
edition = "2021"
authors = ["Evis Drenova <evisdrenova@gmail.com"]

[dependencies]
helix-protocol = { path = "../helix-protocol" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
axum = "0.8.7"
hex = "0.4.3"
blake3 = "1.8.2"
zstd = "0.13.3"
